--- a/index.html
+++ b/index.html
@@ -8,92 +8,8 @@
 		<link rel="stylesheet" href="https://mypico.jasonxu.dev" />
 	</head>
 	<body>
-		<script>
-			class Button extends Component {
-				constructor(label, clicked) {
-					super();
-
-					this.label = label;
-					this.clicked = clicked;
-				}
-
-				render() {
-					return html`<button ${on('click', this.clicked)}>${this.label}</button>`;
-				}
-			}
-
-			class TodoItem extends Component {
-				constructor(value) {
-					super();
-
-					this.value = value;
-				}
-
-				render() {
-					return html`<div>${this.value}</div>`;
-				}
-			}
-
-			class ClickBtn extends Component {
-				state = state(this, { count: 0 });
-
-				render() {
-					return html`${new Button(`Clicked ${this.state.count} times.`, () => this.state.count++)}`;
-				}
-			}
-
-			class Input extends Component {
-				state = state(this, { value: '' });
-
-				constructor(onChange = () => {}) {
-					super();
-
-					this.onChange = onChange;
-				}
-
-				render() {
-					const self = this;
-
-					return html`<input
-						type="text"
-						value="${this.state.value}"
-						${on('input', function () {
-							self.state.value = this.value;
-							self.onChange(self.state.value);
-						})} />`;
-				}
-			}
-
-			class App extends Component {
-				state = state(this, { todos: [] });
-
-				render() {
-					const self = this;
-					const input = new Input();
-
-					return html`
-						<h1>
-							Hi ${new Button('Enter Name', function () {
-								this.outerHTML = prompt('Enter your name');
-							})}
-						</h1>
-						<div>
-							${input}
-							${new Button('New Todo', () => {
-								console.log(input.state.value);
-								this.state.todos = [...this.state.todos, input.state.value];
-								input.state.value = '';
-							})}
-							${this.state.todos.map((todo) => new TodoItem(todo))} ${ClickBtn}
-						</div>
-					`;
-				}
-			}
-
-			const app = html`${App}`;
-			console.log(app);
-			document.body.append(...app);
-		</script>
+		<div id="root"></div>
+		<script src="script.js"></script>
 	</body>
 </html>
 
